# Dashwerks_Project

./: README.md  exampleArduinoData.txt  pyproject.toml  system_Data_Processor.py  test.py
Data Logging Development/: 003 22_07_18 Working Data Logger.py  005 22_07_18 Working Data Logger.py  006 22_07_19 Data Logger.py  008 22_07_28 Data Logger Serial Input Integration.py  009.1 22_07_29 Development Data Logger Serial Input Integration.py  009.2 22_07_29 Development Data Logger Serial Input Integration.py  009.4 22_07_29 Development Data Logger Serial Input Integration TEMP.py  009.52 22_07_29 Development Data Logger Serial Input Integration TEMP.py  010.0 22_08_15 development Data Input and Logger.py  010.1 22_08_15 development Data Input and Logger.py  010.2 22_08_16 development Data Input and Logger.py  011.00 22_08_18 Raspberry to Pi Data Input.py  011.01 22_08_18 Working Excel File Creator and Logger.py  011.3 22_08_26 Working Dictonary and update.py  14.2.csv  22.09.03 sysData_tester.py  22.09.04 sysData_tester.py  22.09.06 System_Data_02.py  System_Data_02.py  python  setup.py  sysData_tester.py  systemData.py  tester.py
Display Development/: 001 22_07_12_skunkworks display.py  002 22_07_12_skunkworks display.py  003 22_07_12_skunkworks display.py  004 22_07_12_skunkworks display.py  006 22_07_18_skunkworks display matLib Development.py  007 22_07_18_skunkworks display mathlib Rework.py  008 22_07_18_skunkworks display matLib Development.py  009 22_07_18_skunkworks display matLib with Subplots Development.py  0_13.2.csv
src/dashwerks.egg-info/: PKG-INFO  (+2 more)
(+23 files in other folders)
